--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha3 
	- Added ability to do batch downloads on the FS failed downloads
		currently will not be garbage collected (Thx COF)
	- Added default mime type if none found (image/jpg) 
	- Changed XML-RPC ACL type to RPC to reflect multiple uses
	- Tweaked catalog add function to improve speed (Thx Karl Hungus)
	- Added XML API borrows authentication style from Last.FM's 
		scrobbling, allows query of Ampache DB, returns XML
		see https://ampache.bountysource.com/wiki/xmlapi
	- Added tweak for Wii so that Flash player opens in current window
		(Thx Dgn)
	- Fixed bug where Ampache would incorrectly search for album art
		when config option was empty (Thx Karl Hungus)
	- Enabling a Localplay Method will now set Allow Localplay to true
	- Fixed all playlist methods, send, send and clear and clear on 
		send now work correctly
	- Added single song view
	- Added Play Select drop down back in
	- Fixed ordering of catalogs
	- Fixed multi-genre Random Play
	- New Version of Flash player fixes playlist repeat bug (Thx hugoh)
	- Fixed catalog update and album art dump command line tools
	- Removed dead link for renaming an Artist
	- Fixed batch download of a single album
	- Added reset of filters when switching between browse types this
		may be removed in the future...
	- Fixed LastFM submitting even when there was no username/password
	- Put Catalog 'All' Functions back onto catalog view
	- Fixed Admin Preferences reverting to user after first update
	- Fixed Localplay playlist
	- Updated Ajax Load icon (Thx Spocky) 
	- Replaced Flash Player with Lacy Morrow's (http://blog.lacymorrow.com/)
		(Thx Hugoh)
	- Fixed ACL's